--- a/haste.html
+++ b/haste.html
@@ -201,11 +201,11 @@
         <section class="result-card" aria-live="polite">
           <div class="result-label">Effective Haste</div>
           <div class="result-value" id="hasteResult">5.00%</div>
-          <div class="conversion-text" id="conversionText">includes <img src="https://wow.zamimg.com/images/wow/icons/tiny/spell_shadow_shadowform.gif" alt="Shadowform" class="explainer-icon"> Shadowform</div>
+          <div class="conversion-text" id="conversionText">includes <img src="https://wow.zamimg.com/images/wow/icons/tiny/spell_shadow_shadowform.gif" alt="Shadowform" class="explainer-icon" data-wowhead="spell=15473&domain=mop-classic"> Shadowform</div>
           
           <!-- WeakAura Display -->
           <div class="weakaura-container">
-            <h3 class="weakaura-title">WeakAura</h3>
+            <h3 class="weakaura-title">Track your haste in-game</h3>
             <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="weakaura-link">
               <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif"
                    alt="Shadow Priest DoT Tracker WeakAura"
