--- a/guide.html
+++ b/guide.html
@@ -378,10 +378,10 @@
                   <tr><th>Stat</th><th>Value</th><th></th></tr>
                 </thead>
                 <tbody>
-                  <tr><td>Haste</td><td>15,294</td><td class="stats-pct">42.79%</td></tr>
-                  <tr><td>Hit</td><td>5,123</td><td class="stats-pct">15.07%</td></tr>
-                  <tr><td>Crit</td><td>3,545</td><td class="stats-pct">21.62%</td></tr>
-                  <tr><td>Mastery</td><td>9,564</td><td class="stats-pct">43.09%</td></tr>
+                  <tr><td class="stats-stat-name">Haste</td><td class="stats-val">15,294</td><td class="stats-pct">42.79%</td></tr>
+                  <tr><td class="stats-stat-name">Hit</td><td class="stats-val">5,123</td><td class="stats-pct">15.07%</td></tr>
+                  <tr><td class="stats-stat-name">Crit</td><td class="stats-val">3,545</td><td class="stats-pct">21.62%</td></tr>
+                  <tr><td class="stats-stat-name">Mastery</td><td class="stats-val">9,564</td><td class="stats-pct">43.09%</td></tr>
                 </tbody>
               </table>
               <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
@@ -399,13 +399,13 @@
                   <tr><th>Stat</th><th>EP Value</th></tr>
                 </thead>
                 <tbody>
-                  <tr class="stats-row-highlight"><td>Intellect</td><td>1.00</td></tr>
-                  <tr><td>Spell Power</td><td>0.98</td></tr>
-                  <tr><td>Spirit</td><td>0.90</td></tr>
-                  <tr><td>Hit</td><td>0.85</td></tr>
-                  <tr><td>Haste</td><td>0.75</td></tr>
-                  <tr><td>Mastery</td><td>0.51</td></tr>
-                  <tr><td>Crit</td><td>0.49</td></tr>
+                  <tr class="stats-row-highlight"><td class="stats-stat-name">Intellect</td><td class="stats-val">1.00</td></tr>
+                  <tr><td class="stats-stat-name">Spell Power</td><td class="stats-val">0.98</td></tr>
+                  <tr><td class="stats-stat-name">Spirit</td><td class="stats-val">0.90</td></tr>
+                  <tr><td class="stats-stat-name">Hit</td><td class="stats-val">0.85</td></tr>
+                  <tr><td class="stats-stat-name">Haste</td><td class="stats-val">0.75</td></tr>
+                  <tr><td class="stats-stat-name">Mastery</td><td class="stats-val">0.51</td></tr>
+                  <tr><td class="stats-stat-name">Crit</td><td class="stats-val">0.49</td></tr>
                 </tbody>
               </table>
             </div>
