--- a/guide.html
+++ b/guide.html
@@ -384,11 +384,6 @@
                   <tr><td class="stats-stat-name">Mastery</td><td class="stats-val">9,564</td><td class="stats-pct">43.09%</td></tr>
                 </tbody>
               </table>
-              <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
-              <a href="/haste?rating=15294" class="stats-haste-link">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="14" height="14"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
-                Check haste breakpoints at 15,294
-              </a>
             </div>
 
             <!-- Stat Weights -->
@@ -410,6 +405,13 @@
               </table>
             </div>
 
+          </div>
+          <div class="stats-mid-strip">
+            <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
+            <a href="/haste?rating=15294" class="stats-haste-link">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="14" height="14"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+              Check haste breakpoints at 15,294
+            </a>
           </div>
           <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer" class="stats-sim-cta">
             <img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="" class="stats-source-icon">
