--- a/guide.html
+++ b/guide.html
@@ -367,57 +367,104 @@
               <span class="stats-priority-arrow">→</span>
               <span>Crit</span>
             </span>
+            <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer" class="stats-wowsims-cta">
+              <img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="" class="stats-source-icon">
+              <span>WowSims</span>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="11" height="11"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
+            </a>
           </div>
           <div class="stats-grid">
 
             <!-- T15 BiS -->
             <div class="stats-block">
               <h3 class="stats-block-heading">T15 BiS</h3>
-              <table class="stats-table">
-                <thead>
-                  <tr><th>Stat</th><th>Value</th><th></th></tr>
-                </thead>
-                <tbody>
-                  <tr><td class="stats-stat-name">Haste</td><td class="stats-val">15,294</td><td class="stats-pct">42.79%</td></tr>
-                  <tr><td class="stats-stat-name">Hit</td><td class="stats-val">5,123</td><td class="stats-pct">15.07%</td></tr>
-                  <tr><td class="stats-stat-name">Crit</td><td class="stats-val">3,545</td><td class="stats-pct">21.62%</td></tr>
-                  <tr><td class="stats-stat-name">Mastery</td><td class="stats-val">9,564</td><td class="stats-pct">43.09%</td></tr>
-                </tbody>
-              </table>
+              <div class="stats-bars">
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header">
+                    <span class="stat-bar-name">Haste</span>
+                    <a href="/haste?rating=15294" class="stat-bar-link" title="Check haste breakpoints at 15,294">
+                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" width="12" height="12"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+                    </a>
+                  </div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:99%"></div></div>
+                  <div class="stat-bar-meta">
+                    <span class="stat-bar-pct">42.79%</span>
+                    <span class="stat-bar-val">15,294</span>
+                  </div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Hit</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:35%"></div></div>
+                  <div class="stat-bar-meta">
+                    <span class="stat-bar-pct">15.07%</span>
+                    <span class="stat-bar-val">5,123</span>
+                  </div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Crit</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:50%"></div></div>
+                  <div class="stat-bar-meta">
+                    <span class="stat-bar-pct">21.62%</span>
+                    <span class="stat-bar-val">3,545</span>
+                  </div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Mastery</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:100%"></div></div>
+                  <div class="stat-bar-meta">
+                    <span class="stat-bar-pct">43.09%</span>
+                    <span class="stat-bar-val">9,564</span>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <!-- Stat Weights -->
             <div class="stats-block">
               <h3 class="stats-block-heading">Stat Weights (EP)</h3>
-              <table class="stats-table">
-                <thead>
-                  <tr><th>Stat</th><th>EP Value</th></tr>
-                </thead>
-                <tbody>
-                  <tr class="stats-row-highlight"><td class="stats-stat-name">Intellect</td><td class="stats-val">1.00</td></tr>
-                  <tr><td class="stats-stat-name">Spell Power</td><td class="stats-val">0.98</td></tr>
-                  <tr><td class="stats-stat-name">Spirit</td><td class="stats-val">0.90</td></tr>
-                  <tr><td class="stats-stat-name">Hit</td><td class="stats-val">0.85</td></tr>
-                  <tr><td class="stats-stat-name">Haste</td><td class="stats-val">0.75</td></tr>
-                  <tr><td class="stats-stat-name">Mastery</td><td class="stats-val">0.51</td></tr>
-                  <tr><td class="stats-stat-name">Crit</td><td class="stats-val">0.49</td></tr>
-                </tbody>
-              </table>
+              <div class="stats-bars">
+                <div class="stat-bar-row stat-bar-row--highlight">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Intellect</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:100%"></div></div>
+                  <div class="stat-bar-meta"><span class="stat-bar-val">1.00</span></div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Spell Power</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:98%"></div></div>
+                  <div class="stat-bar-meta"><span class="stat-bar-val">0.98</span></div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Spirit</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:90%"></div></div>
+                  <div class="stat-bar-meta"><span class="stat-bar-val">0.90</span></div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Hit</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:85%"></div></div>
+                  <div class="stat-bar-meta"><span class="stat-bar-val">0.85</span></div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Haste</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:75%"></div></div>
+                  <div class="stat-bar-meta"><span class="stat-bar-val">0.75</span></div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Mastery</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:51%"></div></div>
+                  <div class="stat-bar-meta"><span class="stat-bar-val">0.51</span></div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Crit</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:49%"></div></div>
+                  <div class="stat-bar-meta"><span class="stat-bar-val">0.49</span></div>
+                </div>
+              </div>
             </div>
 
           </div>
           <div class="stats-mid-strip">
             <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
-            <a href="/haste?rating=15294" class="stats-haste-link">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="14" height="14"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
-              Check haste breakpoints at 15,294
-            </a>
           </div>
-          <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener noreferrer" class="stats-sim-cta">
-            <img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="" class="stats-source-icon">
-            Sim your gear on WowSims
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="13" height="13"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
-          </a>
         </div>
       </div>
     </div>
