--- a/guide.html
+++ b/guide.html
@@ -379,11 +379,12 @@
             <div class="stats-block">
               <h3 class="stats-block-heading">T15 BiS</h3>
               <div class="stats-bars">
-                <div class="stat-bar-row">
+                <div class="stat-bar-row stat-bar-row--hero">
                   <div class="stat-bar-header">
                     <span class="stat-bar-name">Haste</span>
                     <a href="/haste?rating=15294" class="stat-bar-link" title="Check haste breakpoints at 15,294">
-                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" width="12" height="12"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+                      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" width="11" height="11"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+                      Breakpoints
                     </a>
                   </div>
                   <div class="stat-bar-track"><div class="stat-bar-fill" style="width:99%"></div></div>
