--- a/guide.html
+++ b/guide.html
@@ -384,13 +384,21 @@
                     <span class="stat-bar-name">Haste</span>
                     <a href="/haste?rating=15294" class="stat-bar-link" title="Check haste breakpoints at 15,294">
                       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" width="11" height="11"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
-                      Breakpoints
+                      Haste Breakpoints
                     </a>
                   </div>
                   <div class="stat-bar-track"><div class="stat-bar-fill" style="width:99%"></div></div>
                   <div class="stat-bar-meta">
                     <span class="stat-bar-pct">42.79%</span>
                     <span class="stat-bar-val">15,294</span>
+                  </div>
+                </div>
+                <div class="stat-bar-row">
+                  <div class="stat-bar-header"><span class="stat-bar-name">Mastery</span></div>
+                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:100%"></div></div>
+                  <div class="stat-bar-meta">
+                    <span class="stat-bar-pct">43.09%</span>
+                    <span class="stat-bar-val">9,564</span>
                   </div>
                 </div>
                 <div class="stat-bar-row">
@@ -407,14 +415,6 @@
                   <div class="stat-bar-meta">
                     <span class="stat-bar-pct">21.62%</span>
                     <span class="stat-bar-val">3,545</span>
-                  </div>
-                </div>
-                <div class="stat-bar-row">
-                  <div class="stat-bar-header"><span class="stat-bar-name">Mastery</span></div>
-                  <div class="stat-bar-track"><div class="stat-bar-fill" style="width:100%"></div></div>
-                  <div class="stat-bar-meta">
-                    <span class="stat-bar-pct">43.09%</span>
-                    <span class="stat-bar-val">9,564</span>
                   </div>
                 </div>
               </div>
