--- a/guide.html
+++ b/guide.html
@@ -416,6 +416,7 @@
                     <span class="stat-bar-pct">21.62%</span>
                     <span class="stat-bar-val">3,545</span>
                   </div>
+                  <p class="stat-bar-caption"><a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit on proc.</p>
                 </div>
               </div>
             </div>
@@ -462,9 +463,6 @@
               </div>
             </div>
 
-          </div>
-          <div class="stats-mid-strip">
-            <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
           </div>
         </div>
       </div>
