--- a/guide.html
+++ b/guide.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
-  <meta name="description" content="Complete Shadow Priest guide for MoP Classic — talents, rotation, gear, glyphs, enchants, professions & boss tips by skimmynz.">
+  <meta name="description" content="Complete Shadow Priest guide for MoP Classic — talents, rotation, macros, stats & boss tips by skimmynz.">
   <meta name="keywords" content="shadow priest, guide, MoP Classic, talents, rotation, gear, BiS, glyphs, World of Warcraft, skimmynz">
 
   <title>MOP PVE Guide | skimmynz</title>
