--- a/landing.html
+++ b/landing.html
@@ -189,41 +189,22 @@
     </div>
     <div class="about-grid">
 
-      <!-- Left: Classic WoW Armory embed -->
+      <!-- Left: 3D character model viewer -->
       <div class="about-armory">
         <div class="about-armory-label">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
-          Armory Profile
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="8" r="4"/><path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/></svg>
+          3D Character
         </div>
-        <div class="about-armory-embed">
-          <iframe
-            src="https://classicwowarmory.com/character/US/arugal-au/skimmyxo?game_version=classic"
-            title="skimmynz Classic WoW Armory"
-            loading="lazy"
-          ></iframe>
+        <div class="about-armory-embed" id="charModelContainer">
+          <div class="model-loading">
+            <div class="model-loading-spinner"></div>
+            <span>Loading model&hellip;</span>
+          </div>
         </div>
       </div>
 
-      <!-- Right: Bio + live parse table -->
+      <!-- Right: live parse table only -->
       <div class="about-info">
-
-        <div class="about-bio-block">
-          <p class="about-label">Creator</p>
-          <h3 class="about-name">skimmynz</h3>
-          <p class="about-bio">
-            Shadow Priest theorycrafter and Heroic raider in MoP Classic with multiple
-            Rank&nbsp;1 parses across Throne of Thunder — including a 100% parse on Megaera
-            (Rank&nbsp;15) and Rank&nbsp;12 globally on Iron Qon.
-          </p>
-          <a
-            href="https://classic.warcraftlogs.com/character/us/arugal-au/skimmyxo"
-            target="_blank" rel="noopener"
-            class="about-wcl-btn"
-          >
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
-            View on WarcraftLogs
-          </a>
-        </div>
 
         <!-- Parse table — populated by home.js; shows shimmer until loaded -->
         <div class="about-parses" id="aboutParses">
