--- a/landing.html
+++ b/landing.html
@@ -225,6 +225,60 @@
           </div>
         </div>
 
+        <!-- Character stats snapshot -->
+        <div class="char-stats-card">
+          <div class="char-stats-hdr">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
+            Character Stats
+          </div>
+          <div class="char-stats-body">
+            <div class="stat-row">
+              <span class="stat-name">Health</span>
+              <span class="stat-val">513,161</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Mana</span>
+              <span class="stat-val">300,000</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Stamina</span>
+              <span class="stat-val">26,197</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Intellect</span>
+              <span class="stat-val">23,571</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Spirit</span>
+              <span class="stat-val">4,395</span>
+            </div>
+            <div class="stat-row stat-row--sep">
+              <span class="stat-name">Spell Power</span>
+              <span class="stat-val">41,402</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Spell Haste</span>
+              <span class="stat-val stat-val--pct">41.76%</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Spell Hit</span>
+              <span class="stat-val stat-val--pct">15.13%</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Spell Crit</span>
+              <span class="stat-val stat-val--pct">20.52%</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Expertise</span>
+              <span class="stat-val stat-val--dim">0.00%</span>
+            </div>
+            <div class="stat-row">
+              <span class="stat-name">Mastery</span>
+              <span class="stat-val stat-val--pct">43.13%</span>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
