--- a/haste.html
+++ b/haste.html
@@ -57,7 +57,7 @@
               <circle cx="8.5" cy="7" r="4"/>
               <polyline points="17 11 19 13 23 9"/>
             </svg>
-            Rankings
+            Top 100
           </a>
         </li>
         <li>
