--- a/guide.html
+++ b/guide.html
@@ -43,7 +43,7 @@
         <li>
           <a href="/rankings">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><polyline points="17 11 19 13 23 9"/></svg>
-            Rankings
+            Top 100
           </a>
         </li>
         <li>
