--- a/rankings.html
+++ b/rankings.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-5698535707794768">
-  <title>Rankings | skimmynz</title>
+  <title>tOP 100 | skimmynz</title>
 
-  <meta name="description" content="View the Top 100 Global Shadow Priest rankings for Mists of Pandaria Classic 25 man Heroic raids.">
+  <meta name="description" content="Top 100 Global Shadow Priest rankings for Mists of Pandaria Classic 25 man Heroic raids.">
   <meta name="keywords" content="shadow priest, rankings, MoP Classic, top 100, DPS, World of Warcraft, talent builds">
 
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
