--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
        ════════════════════════════════════════════════════ -->
   <nav class="top-nav">
     <div class="nav-container">
+      <a href="/" class="nav-brand">skimmynz</a>
       <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">☰</button>
       <ul class="nav-links" id="navLinks">
         <li>
@@ -139,7 +140,43 @@
   </section>
 
   <!-- ════════════════════════════════════════════════════
-       Zone 2 — Live / Featured Content
+       Zone 2 — Feature Cards
+       ════════════════════════════════════════════════════ -->
+  <section class="home-section features-section">
+    <div class="features-grid">
+      <a href="/rankings" class="feature-card">
+        <div class="feature-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><polyline points="17 11 19 13 23 9"/></svg>
+        </div>
+        <h3 class="feature-title">Top 100</h3>
+        <p class="feature-desc">See how the best Shadow Priests in the world gear, talent &amp; play across all Heroic encounters.</p>
+      </a>
+      <a href="/guide" class="feature-card">
+        <div class="feature-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
+        </div>
+        <h3 class="feature-title">Guide</h3>
+        <p class="feature-desc">Talents, rotation, gearing &amp; BiS lists for every raid tier.</p>
+      </a>
+      <a href="/haste" class="feature-card">
+        <div class="feature-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+        </div>
+        <h3 class="feature-title">Haste Calculator</h3>
+        <p class="feature-desc">Improve your damage by understanding Haste Breakpoints.</p>
+      </a>
+      <a href="/addons" class="feature-card">
+        <div class="feature-icon">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/></svg>
+        </div>
+        <h3 class="feature-title">Addons &amp; WAs</h3>
+        <p class="feature-desc">Copy my full UI — addon list and WeakAura strings included.</p>
+      </a>
+    </div>
+  </section>
+
+  <!-- ════════════════════════════════════════════════════
+       Zone 3 — Live / Featured Content
        ════════════════════════════════════════════════════ -->
   <section class="home-section">
     <div class="section-header">
@@ -176,6 +213,25 @@
 
     </div>
   </section>
+
+  <!-- ════════════════════════════════════════════════════
+       Footer
+       ════════════════════════════════════════════════════ -->
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="footer-social">
+        <a href="https://youtube.com/@skimmynz" target="_blank" rel="noopener" class="footer-link" aria-label="YouTube">
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+          YouTube
+        </a>
+        <a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener" class="footer-link" aria-label="Twitch">
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/></svg>
+          Twitch
+        </a>
+      </div>
+      <p class="footer-copy">&copy; 2025 skimmynz</p>
+    </div>
+  </footer>
 
   <script defer src="js/home.js"></script>
   <script defer src="js/nav.js"></script>
