--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
         </div>
         <h3 class="feature-title">Guide</h3>
-        <p class="feature-desc">Talents, rotation, gearing &amp; BiS lists for every raid tier.</p>
+        <p class="feature-desc">Everything you need — talents, rotation, macros, stats and boss tips.</p>
       </a>
       <a href="/haste" class="feature-card">
         <div class="feature-icon">
