--- a/index.html
+++ b/index.html
@@ -112,34 +112,46 @@
         </a>
       </div>
 
-      <div class="features-grid">
-        <a href="/rankings" class="feature-card">
-          <div class="feature-icon">
+      <div class="feature-strip">
+        <a href="/rankings" class="feature-item">
+          <div class="feature-item-icon">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><polyline points="17 11 19 13 23 9"/></svg>
           </div>
-          <h3 class="feature-title">Top 100</h3>
-          <p class="feature-desc">See how the best Shadow Priests in the world gear, talent &amp; play across all Heroic encounters.</p>
+          <div class="feature-item-body">
+            <div class="feature-item-title">Top 100</div>
+            <div class="feature-item-desc">See how the best Shadow Priests in the world gear, talent &amp; play across all Heroic encounters.</div>
+          </div>
+          <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
-        <a href="/guide" class="feature-card">
-          <div class="feature-icon">
+        <a href="/guide" class="feature-item">
+          <div class="feature-item-icon">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>
           </div>
-          <h3 class="feature-title">Guide</h3>
-          <p class="feature-desc">Everything you need — talents, rotation, macros, stats and boss tips.</p>
+          <div class="feature-item-body">
+            <div class="feature-item-title">Guide</div>
+            <div class="feature-item-desc">Everything you need — talents, rotation, macros, stats and boss tips.</div>
+          </div>
+          <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
-        <a href="/haste" class="feature-card">
-          <div class="feature-icon">
+        <a href="/haste" class="feature-item">
+          <div class="feature-item-icon">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
           </div>
-          <h3 class="feature-title">Haste Calculator</h3>
-          <p class="feature-desc">Improve your damage by understanding Haste Breakpoints.</p>
+          <div class="feature-item-body">
+            <div class="feature-item-title">Haste Calculator</div>
+            <div class="feature-item-desc">Improve your damage by understanding Haste Breakpoints.</div>
+          </div>
+          <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
-        <a href="/addons" class="feature-card">
-          <div class="feature-icon">
+        <a href="/addons" class="feature-item">
+          <div class="feature-item-icon">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/></svg>
           </div>
-          <h3 class="feature-title">Addons &amp; WAs</h3>
-          <p class="feature-desc">Copy my full UI — addon list and WeakAura strings included.</p>
+          <div class="feature-item-body">
+            <div class="feature-item-title">Addons &amp; WAs</div>
+            <div class="feature-item-desc">Copy my full UI — addon list and WeakAura strings included.</div>
+          </div>
+          <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
       </div>
     </div>
