--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div class="feature-item-body">
             <div class="feature-item-title">Top 100</div>
-            <div class="feature-item-desc">See how the best Shadow Priests in the world gear, talent &amp; play across all Heroic encounters.</div>
+            <div class="feature-item-desc">How the world's best Shadow Priests gear, talent &amp; play.</div>
           </div>
           <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
@@ -129,7 +129,7 @@
           </div>
           <div class="feature-item-body">
             <div class="feature-item-title">Guide</div>
-            <div class="feature-item-desc">Everything you need — talents, rotation, macros, stats and boss tips.</div>
+            <div class="feature-item-desc">Talents, rotation, macros, stats and boss tips.</div>
           </div>
           <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
@@ -139,7 +139,7 @@
           </div>
           <div class="feature-item-body">
             <div class="feature-item-title">Haste Calculator</div>
-            <div class="feature-item-desc">Improve your damage by understanding Haste Breakpoints.</div>
+            <div class="feature-item-desc">Learn the importance of Haste Breakpoints.</div>
           </div>
           <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
@@ -149,7 +149,7 @@
           </div>
           <div class="feature-item-body">
             <div class="feature-item-title">Addons &amp; WAs</div>
-            <div class="feature-item-desc">Copy my full UI — addon list and WeakAura strings included.</div>
+            <div class="feature-item-desc">My full addon setup and WeakAura strings.</div>
           </div>
           <svg class="feature-item-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="9 18 15 12 9 6"/></svg>
         </a>
