--- a/rankings.html
+++ b/rankings.html
@@ -166,6 +166,7 @@
   <script src="js/tiers.js" defer></script>
   <script src="js/talents.js" defer></script>
   <script src="js/parsing.js" defer></script>
+  <script src="js/player-haste.js" defer></script>
   <script src="js/rankings.js" defer></script>
 </body>
 </html>
